window.__isSpymaster instead of 2 bundles

--- a/spymaster.html
+++ b/spymaster.html
@@ -12,6 +12,9 @@
   </head>
   <body>
     <div id="container"></div>
-    <script src="/dist/spymaster.js"></script>
+    <script>
+      window.__isSpymaster = true;
+    </script>
+    <script src="/dist/main.js"></script>
   </body>
 </html>
