--- a/spymaster.html
+++ b/spymaster.html
@@ -15,6 +15,6 @@
     <script>
       window.__isSpymaster = true;
     </script>
-    <script src="/dist/main.js"></script>
+    <script src="../dist/main.js"></script>
   </body>
 </html>
