--- a/spymaster.html
+++ b/spymaster.html
@@ -8,6 +8,7 @@
       href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700"
       rel="stylesheet"
     />
+    <link href="./Card.css" rel="stylesheet">
     <title>You are the Spymaster!</title>
   </head>
   <body>
@@ -15,6 +16,6 @@
     <script>
       window.__isSpymaster = true;
     </script>
-    <script src="../dist/main.js"></script>
+    <script src="./dist/main.js"></script>
   </body>
 </html>
