--- a/index.template.html
+++ b/index.template.html
@@ -17,6 +17,82 @@
     ul {
       list-style-type: none;
     }
+
+    .card {
+      font-family: 'Roboto Slab';
+      font-weight: 700;
+      font-size: 1rem;
+      color: #fff;
+      border-radius: 3px;
+      box-shadow: 0px 5px 20px -10px 0.5 rgb(0, 0, 0, 0.5);
+      text-align: center;
+      width: 120px;
+      height: 80px;
+      line-height: 80px;
+    }
+
+    .back {
+      transition: all 0.3s;
+      transform: translateY(0px) rotate3d(0, 0, 0, 0deg);
+      color: rgba(255, 255, 255, 1);
+    }
+
+    .front {
+      transition: all 0.3s;
+      /* transform: translateY(0px) rotate3d(0, 1, 0, 180deg); */
+      /* color: rgba(255, 255, 255, 0); */
+    }
+
+    .red {
+      background-color: #f55;
+    }
+
+    .blue {
+      background-color: #69d;
+    }
+
+    .black {
+      background-color: #000;
+    }
+
+    .white {
+      background-color: #fff;
+    }
+
+    .yellow {
+      background-color: #bdb76b;
+    }
+
+    .default {
+      background-color: #888;
+    }
+
+    /* .flip {
+      animation: flip 0.3s;
+    } */
+
+    @keyframes flip {
+      0% {
+        transform: translateY(0px) rotate3d(0, 0, 0, 0deg);
+        animation-timing-function: cubic-bezier();
+      }
+      50% {
+        transform: translateY(-10px) rotate3d(0, 0.5, 0, 90deg);
+        box-shadow: 0px 5px 20px 0px rgb(0, 0, 0, 0.5);
+        animation-timing-function: cubic-bezier();
+      }
+      100% {
+        transform: translateY(0px) rotate3d(0, 1, 0, 180deg);
+        animation-timing-function: cubic-bezier();
+      }
+    }
+
+    @media screen and (min-device-width: 320px) and (max-device-width: 568px) {
+      .card {
+        font-size: 0.5rem;
+        width: 60px;
+      }
+    }
   </style>
 </head>
 <body>
