--- a/index.template.html
+++ b/index.template.html
@@ -18,6 +18,20 @@
       list-style-type: none;
     }
 
+    button {
+      font-family: 'Roboto Slab';
+      font-weight: 700;
+      border: 2px solid gray;
+      color: gray;
+      background-color: white;
+      padding: 1em;
+    }
+
+    button:hover {
+      border: 2px solid black;
+      color: black;
+    }
+
     .card {
       font-family: 'Roboto Slab';
       font-weight: 700;
