--- a/index.template.html
+++ b/index.template.html
@@ -32,6 +32,17 @@
       color: black;
     }
 
+    .grid {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-around;
+      align-items: center;
+    }
+
+    .grid-container {
+      margin: 1em;
+    }
+
     .card {
       font-family: 'Roboto Slab';
       font-weight: 700;
@@ -39,8 +50,13 @@
       color: #fff;
       border-radius: 3px;
       box-shadow: 0px 5px 20px -10px 0.5 rgb(0, 0, 0, 0.5);
-      text-align: center;
-      width: 120px;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      margin: 0.5em;
+      flex-grow: 1;
+      /* min-width: 120px; */
+        width: 100%;
       height: 80px;
       line-height: 80px;
     }
@@ -85,7 +101,7 @@
       animation: flip 0.3s;
     } */
 
-    @keyframes flip {
+    /* @keyframes flip {
       0% {
         transform: translateY(0px) rotate3d(0, 0, 0, 0deg);
         animation-timing-function: cubic-bezier();
@@ -99,12 +115,17 @@
         transform: translateY(0px) rotate3d(0, 1, 0, 180deg);
         animation-timing-function: cubic-bezier();
       }
+    } */
+
+    @media screen and (min-width: 540px) {
+      .card {
+        width: calc(100% * 1/3 - 1em);
+      }
     }
 
-    @media screen and (min-device-width: 320px) and (max-device-width: 568px) {
+    @media screen and (min-width: 720px) {
       .card {
-        font-size: 0.5rem;
-        width: 60px;
+        width: calc(100% * 1/5 - 1em);
       }
     }
   </style>
