--- a/index.template.html
+++ b/index.template.html
@@ -50,13 +50,14 @@
       color: #fff;
       border-radius: 3px;
       box-shadow: 0px 5px 20px -10px 0.5 rgb(0, 0, 0, 0.5);
+      display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
       margin: 0.5em;
       flex-grow: 1;
       /* min-width: 120px; */
-        width: 100%;
+      width: 100%;
       height: 80px;
       line-height: 80px;
     }
