--- a/index.template.html
+++ b/index.template.html
@@ -32,14 +32,16 @@
       color: black;
     }
 
+    .grid-container {
+      margin: auto;
+      max-width: 64em;
+    }
+
     .grid {
       display: flex;
       flex-wrap: wrap;
       justify-content: space-around;
       align-items: center;
-    }
-
-    .grid-container {
       margin: 1em;
     }
 
