Border color, user feedback

--- a/index.template.html
+++ b/index.template.html
@@ -64,6 +64,18 @@
       width: 100%;
     }
 
+    .card.seen {
+      border: 20px solid rgb(0, 0, 0, 0.3);
+    }
+
+    .chip {
+      padding: 1.5em 2em;
+      border-radius: 3px;
+      color: #fff;
+      font-family: 'Roboto Slab';
+      font-weight: 700;
+    }
+
     .back {
       transition: all 0.3s;
       transform: translateY(0px) rotate3d(0, 0, 0, 0deg);
@@ -96,6 +108,23 @@
 
     .default {
       background-color: #888;
+    }
+
+    .red-text {
+      color: #f55;
+    }
+
+    .blue-text {
+      color: #69d;
+    }
+
+    .winner {
+      margin: 1em auto;
+      text-align: center;
+      width: 100%;
+      font-size: 300%;
+      font-family: 'Roboto Slab';
+      font-weight: 700;
     }
 
     /* Medium */
