--- a/index.template.html
+++ b/index.template.html
@@ -36,7 +36,7 @@
       display: flex;
       flex-direction: column;
       margin: auto;
-      height: 100vh;
+      /* height: 80vh; */
       max-width: 64em;
     }
 
@@ -54,7 +54,7 @@
       color: #fff;
       border: none;
       border-radius: 3px;
-      box-shadow: 0px 5px 20px -10px 0.5 rgb(0, 0, 0, 0.5);
+      /* box-shadow: 0px 5px 20px -10px 0.5 rgb(0, 0, 0, 0.5); */
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -131,6 +131,7 @@
     @media screen and (min-width: 540px) {
       .card {
         width: calc(100% * 1/3 - 1em);
+        height: calc(100vh * 1/5 - 3em);
         min-height: 0;
       }
     }
