--- a/index.template.html
+++ b/index.template.html
@@ -52,7 +52,7 @@
       font-weight: 700;
       font-size: 1rem;
       color: #fff;
-      border: none;
+      border: 20px solid transparent;
       border-radius: 3px;
       /* box-shadow: 0px 5px 20px -10px 0.5 rgb(0, 0, 0, 0.5); */
       display: flex;
@@ -131,7 +131,7 @@
     @media screen and (min-width: 540px) {
       .card {
         width: calc(100% * 1/3 - 1em);
-        height: calc(100vh * 1/5 - 3em);
+        height: calc(100vh * 1/5 - 1.5em);
         min-height: 0;
       }
     }
