--- a/index.template.html
+++ b/index.template.html
@@ -8,6 +8,15 @@
   <!-- <link rel="stylesheet" href="./public/styles.css"/> -->
   <title>Document</title>
   <style>
+    :root {
+      --red: #f55;
+      --blue: #69d;
+      --gray: #888;
+      --yellow: #bdb76b;
+      --black: #000;
+      --white: #fff;
+    }
+
     * {
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
       box-sizing: border-box;
@@ -21,15 +30,15 @@
     .btn {
       font-family: 'Roboto Slab';
       font-weight: 700;
-      border: 2px solid gray;
-      color: gray;
-      background-color: white;
+      border: 2px solid var(--gray);
+      color: var(--gray);
+      background-color: var(--white);
       padding: 1em;
     }
 
     .btn:hover {
-      border: 2px solid black;
-      color: black;
+      border: 2px solid var(--black);
+      color: var(--black);
     }
 
     .grid-container {
@@ -51,7 +60,7 @@
       font-family: 'Roboto Slab';
       font-weight: 700;
       font-size: 1rem;
-      color: #fff;
+      color: var(--white);
       border: 20px solid transparent;
       border-radius: 3px;
       /* box-shadow: 0px 5px 20px -10px 0.5 rgb(0, 0, 0, 0.5); */
@@ -62,16 +71,19 @@
       min-height: 80px;
       margin: 0.5em;
       width: 100%;
+
     }
 
     .card.seen {
-      border: 20px solid rgb(0, 0, 0, 0.3);
+      background-color: var(--white);
+      border-width: 3px;
+      border-style: solid;
     }
 
     .chip {
       padding: 1.5em 2em;
       border-radius: 3px;
-      color: #fff;
+      color: var(--white);
       font-family: 'Roboto Slab';
       font-weight: 700;
     }
@@ -87,35 +99,47 @@
     }
 
     .red {
-      background-color: #f55;
+      background-color: var(--red);
     }
 
     .blue {
-      background-color: #69d;
+      background-color: var(--blue);
     }
 
     .black {
-      background-color: #000;
+      background-color: var(--black);
     }
 
     .white {
-      background-color: #fff;
+      background-color: var(--white);
     }
 
     .yellow {
-      background-color: #bdb76b;
+      background-color: var(--yellow);
     }
 
     .default {
-      background-color: #888;
+      background-color: var(--gray);
     }
 
-    .red-text {
-      color: #f55;
+    .text-red {
+      color: var(--red);
+      border-color: var(--red);
     }
 
-    .blue-text {
-      color: #69d;
+    .text-blue {
+      color: var(--blue);
+      border-color: var(--blue);
+    }
+
+    .text-yellow {
+      color: var(--yellow);
+      border-color: var(--yellow);
+    }
+
+    .text-black {
+      color: var(--black);
+      border-color: var(--black);
     }
 
     .winner {
