--- a/index.template.html
+++ b/index.template.html
@@ -17,6 +17,26 @@
       --white: #fff;
     }
 
+    *[data-color="red"] {
+      --primary-color: var(--red);
+    }
+
+    *[data-color="blue"] {
+      --primary-color: var(--blue);
+    }
+
+    *[data-color="yellow"] {
+      --primary-color: var(--yellow);
+    }
+
+    *[data-color="black"] {
+      --primary-color: var(--black);
+    }
+
+    *[data-color="gray"] {
+      --primary-color: var(--gray);
+    }
+
     * {
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
       box-sizing: border-box;
@@ -63,27 +83,28 @@
       color: var(--white);
       border: 20px solid transparent;
       border-radius: 3px;
+      background-color: var(--primary-color);
       /* box-shadow: 0px 5px 20px -10px 0.5 rgb(0, 0, 0, 0.5); */
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
       min-height: 80px;
-      margin: 0.5em;
+      margin: 0.25em;
       width: 100%;
-
     }
 
     .card.seen {
       background-color: var(--white);
-      border-width: 3px;
-      border-style: solid;
+      border: 3px solid var(--primary-color);
+      color: var(--primary-color);
     }
 
     .chip {
       padding: 1.5em 2em;
       border-radius: 3px;
       color: var(--white);
+      background-color: var(--primary-color);
       font-family: 'Roboto Slab';
       font-weight: 700;
     }
@@ -98,53 +119,10 @@
       transition: all 0.3s;
     }
 
-    .red {
-      background-color: var(--red);
-    }
-
-    .blue {
-      background-color: var(--blue);
-    }
-
-    .black {
-      background-color: var(--black);
-    }
-
-    .white {
-      background-color: var(--white);
-    }
-
-    .yellow {
-      background-color: var(--yellow);
-    }
-
-    .default {
-      background-color: var(--gray);
-    }
-
-    .text-red {
-      color: var(--red);
-      border-color: var(--red);
-    }
-
-    .text-blue {
-      color: var(--blue);
-      border-color: var(--blue);
-    }
-
-    .text-yellow {
-      color: var(--yellow);
-      border-color: var(--yellow);
-    }
-
-    .text-black {
-      color: var(--black);
-      border-color: var(--black);
-    }
-
     .winner {
       margin: 1em auto;
       text-align: center;
+      color: var(--primary-color);
       width: 100%;
       font-size: 300%;
       font-family: 'Roboto Slab';
@@ -154,8 +132,8 @@
     /* Medium */
     @media screen and (min-width: 540px) {
       .card {
-        width: calc(100% * 1/3 - 1em);
-        height: calc(100vh * 1/5 - 1.5em);
+        width: calc(100% * 1/3 - 0.5em);
+        height: calc(100vh * 1/5 - 1em);
         min-height: 0;
       }
     }
@@ -163,7 +141,7 @@
     /* Desktop */
     @media screen and (min-width: 720px) {
       .card {
-        width: calc(100% * 1/5 - 1em);
+        width: calc(100% * 1/5 - 0.5em);
       }
     }
   </style>
