--- a/index.template.html
+++ b/index.template.html
@@ -47,6 +47,12 @@
       list-style-type: none;
     }
 
+    form {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+    }
+
     .btn {
       font-family: 'Roboto Slab';
       font-weight: 700;
