--- a/index.template.html
+++ b/index.template.html
@@ -38,7 +38,7 @@
     }
 
     * {
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+      font-family: 'Roboto Slab', BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
       box-sizing: border-box;
       margin: 0;
     }
@@ -51,12 +51,27 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
+      max-width: 540px;
+      margin: auto;
+      height: 100vh;
+    }
+
+    form * {
+      margin-top: 1em;
+    }
+
+    input {
+      padding: 1em;
+      /* margin: 1em; */
+      display: block;
+      width: 100%;
     }
 
     .btn {
       font-family: 'Roboto Slab';
       font-weight: 700;
       border: 2px solid var(--gray);
+      border-radius: 3px;
       color: var(--gray);
       background-color: var(--white);
       padding: 1em;
@@ -133,6 +148,14 @@
       font-size: 300%;
       font-family: 'Roboto Slab';
       font-weight: 700;
+    }
+
+    .stack {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      margin: 1em;
     }
 
     /* Medium */
