--- a/index.template.html
+++ b/index.template.html
@@ -1,212 +1,222 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700" rel="stylesheet">
-  <!-- <link rel="stylesheet" href="./public/styles.css"/> -->
-  <title>Document</title>
-  <style>
-    :root {
-      --red: #f55;
-      --blue: #69d;
-      --gray: #888;
-      --yellow: #bdb76b;
-      --black: #000;
-      --white: #fff;
-    }
-
-    *[data-color="red"] {
-      --primary-color: var(--red);
-    }
-
-    *[data-color="blue"] {
-      --primary-color: var(--blue);
-    }
-
-    *[data-color="yellow"] {
-      --primary-color: var(--yellow);
-    }
-
-    *[data-color="black"] {
-      --primary-color: var(--black);
-    }
-
-    *[data-color="gray"] {
-      --primary-color: var(--gray);
-    }
-
-    * {
-      font-family: 'Roboto Slab', BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-      box-sizing: border-box;
-      margin: 0;
-    }
-
-    ul {
-      list-style-type: none;
-    }
-
-    form {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      max-width: 440px;
-      margin: 1em auto
-      /* height: 100%; */
-    }
-
-    form * {
-      margin-top: 1em;
-      width: 100%;
-    }
-
-    input {
-      padding: 1em;
-      /* margin: 1em; */
-      display: block;
-      width: 100%;
-    }
-
-    .btn {
-      font-family: 'Roboto Slab';
-      font-weight: 700;
-      border: 2px solid var(--gray);
-      border-radius: 3px;
-      color: var(--gray);
-      background-color: var(--white);
-      padding: 1em;
-    }
-
-    .btn:hover {
-      border: 2px solid var(--black);
-      color: var(--black);
-    }
-
-    .grid-container {
-      display: flex;
-      flex-direction: column;
-      margin: auto;
-      /* height: 80vh; */
-      max-width: 64em;
-    }
-
-    .grid {
-      display: flex;
-      flex-grow: 1;
-      flex-wrap: wrap;
-      margin: 1em;
-    }
-
-    .card {
-      font-family: 'Roboto Slab';
-      font-weight: 700;
-      font-size: 1rem;
-      color: var(--white);
-      border: 20px solid transparent;
-      border-radius: 3px;
-      background-color: var(--primary-color);
-      /* box-shadow: 0px 5px 20px -10px 0.5 rgb(0, 0, 0, 0.5); */
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      min-height: 80px;
-      margin: 0.25em;
-      width: 100%;
-    }
-
-    .card.seen {
-      background-color: var(--white);
-      border: 3px solid var(--primary-color);
-      color: var(--primary-color);
-    }
-
-    .chip {
-      padding: 1.5em 2em;
-      border-radius: 3px;
-      color: var(--white);
-      background-color: var(--primary-color);
-      font-family: 'Roboto Slab';
-      font-weight: 700;
-    }
-
-    .back {
-      transition: all 0.3s;
-      transform: translateY(0px) rotate3d(0, 0, 0, 0deg);
-      color: rgba(255, 255, 255, 1);
-    }
-
-    .front {
-      transition: all 0.3s;
-    }
-
-    .banner {
-      margin: 1em auto;
-      text-align: center;
-      color: var(--primary-color);
-      width: 100%;
-      font-size: 300%;
-      font-family: 'Roboto Slab';
-      font-weight: 700;
-    }
-
-    .stack {
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      align-items: center;
-      /* margin: 1em; */
-    }
-
-    .full-height {
-      height: 100vh;
-    }
-
-    /* Medium */
-    @media screen and (min-width: 540px) {
-      .card {
-        width: calc(100% * 1/3 - 0.5em);
-        height: calc(100vh * 1/5 - 1em);
-        min-height: 0;
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700"
+      rel="stylesheet"
+    />
+    <!-- <link rel="stylesheet" href="./public/styles.css"/> -->
+    <title>Document</title>
+    <style>
+      :root {
+        --red: #f55;
+        --blue: #69d;
+        --gray: #888;
+        --yellow: #bdb76b;
+        --black: #000;
+        --white: #fff;
       }
-    }
 
-    /* Desktop */
-    @media screen and (min-width: 720px) {
-      .card {
-        width: calc(100% * 1/5 - 0.5em);
+      *[data-color='red'] {
+        --primary-color: var(--red);
       }
-    }
-  </style>
-</head>
-<body>
-  <!-- Start Single Page Apps for GitHub Pages -->
-  <script type="text/javascript">
-    // Single Page Apps for GitHub Pages
-    // MIT License
-    // https://github.com/rafgraph/spa-github-pages
-    // This script checks to see if a redirect is present in the query string,
-    // converts it back into the correct url and adds it to the
-    // browser's history using window.history.replaceState(...),
-    // which won't cause the browser to attempt to load the new url.
-    // When the single page app is loaded further down in this file,
-    // the correct url will be waiting in the browser's history for
-    // the single page app to route accordingly.
-    (function(l) {
-      if (l.search[1] === '/' ) {
-        var decoded = l.search.slice(1).split('&').map(function(s) {
-          return s.replace(/~and~/g, '&')
-        }).join('?');
-        window.history.replaceState(null, null,
+
+      *[data-color='blue'] {
+        --primary-color: var(--blue);
+      }
+
+      *[data-color='yellow'] {
+        --primary-color: var(--yellow);
+      }
+
+      *[data-color='black'] {
+        --primary-color: var(--black);
+      }
+
+      *[data-color='gray'] {
+        --primary-color: var(--gray);
+      }
+
+      * {
+        font-family: 'Roboto Slab', BlinkMacSystemFont, 'Segoe UI', Roboto,
+          Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        box-sizing: border-box;
+        margin: 0;
+      }
+
+      ul {
+        list-style-type: none;
+      }
+
+      form {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        max-width: 440px;
+        margin: 1em auto;
+        /* height: 100%; */
+      }
+
+      form * {
+        margin-top: 1em;
+        width: 100%;
+      }
+
+      input {
+        padding: 1em;
+        /* margin: 1em; */
+        display: block;
+        width: 100%;
+      }
+
+      .btn {
+        font-family: 'Roboto Slab';
+        font-weight: 700;
+        border: 2px solid var(--gray);
+        border-radius: 3px;
+        color: var(--gray);
+        background-color: var(--white);
+        padding: 1em;
+      }
+
+      .btn:hover {
+        border: 2px solid var(--black);
+        color: var(--black);
+      }
+
+      .grid-container {
+        display: flex;
+        flex-direction: column;
+        margin: auto;
+        /* height: 80vh; */
+        max-width: 64em;
+      }
+
+      .grid {
+        display: flex;
+        flex-grow: 1;
+        flex-wrap: wrap;
+        margin: 1em;
+      }
+
+      .card {
+        font-family: 'Roboto Slab';
+        font-weight: 700;
+        font-size: 1rem;
+        color: var(--white);
+        border: 20px solid transparent;
+        border-radius: 3px;
+        background-color: var(--primary-color);
+        /* box-shadow: 0px 5px 20px -10px 0.5 rgb(0, 0, 0, 0.5); */
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        min-height: 80px;
+        margin: 0.25em;
+        width: 100%;
+      }
+
+      .card.seen {
+        background-color: var(--white);
+        border: 3px solid var(--primary-color);
+        color: var(--primary-color);
+      }
+
+      .chip {
+        padding: 1.5em 2em;
+        border-radius: 3px;
+        color: var(--white);
+        background-color: var(--primary-color);
+        font-family: 'Roboto Slab';
+        font-weight: 700;
+      }
+
+      .back {
+        transition: all 0.3s;
+        transform: translateY(0px) rotate3d(0, 0, 0, 0deg);
+        color: rgba(255, 255, 255, 1);
+      }
+
+      .front {
+        transition: all 0.3s;
+      }
+
+      .banner {
+        margin: 1em auto;
+        text-align: center;
+        color: var(--primary-color);
+        width: 100%;
+        font-size: 300%;
+        font-family: 'Roboto Slab';
+        font-weight: 700;
+      }
+
+      .stack {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        /* margin: 1em; */
+      }
+
+      .full-height {
+        height: 100vh;
+      }
+
+      /* Medium */
+      @media screen and (min-width: 540px) {
+        .card {
+          width: calc(100% * 1 / 3 - 0.5em);
+          height: calc(100vh * 1 / 5 - 1em);
+          min-height: 0;
+        }
+      }
+
+      /* Desktop */
+      @media screen and (min-width: 720px) {
+        .card {
+          width: calc(100% * 1 / 5 - 0.5em);
+        }
+      }
+    </style>
+  </head>
+  <body>
+    <!-- Start Single Page Apps for GitHub Pages -->
+    <script type="text/javascript">
+      // Single Page Apps for GitHub Pages
+      // MIT License
+      // https://github.com/rafgraph/spa-github-pages
+      // This script checks to see if a redirect is present in the query string,
+      // converts it back into the correct url and adds it to the
+      // browser's history using window.history.replaceState(...),
+      // which won't cause the browser to attempt to load the new url.
+      // When the single page app is loaded further down in this file,
+      // the correct url will be waiting in the browser's history for
+      // the single page app to route accordingly.
+      (function (l) {
+        if (l.search[1] === '/') {
+          var decoded = l.search
+            .slice(1)
+            .split('&')
+            .map(function (s) {
+              return s.replace(/~and~/g, '&');
+            })
+            .join('?');
+          window.history.replaceState(
+            null,
+            null,
             l.pathname.slice(0, -1) + decoded + l.hash
-        );
-      }
-    }(window.location))
-  </script>
-  <!-- End Single Page Apps for GitHub Pages -->
+          );
+        }
+      })(window.location);
+    </script>
+    <!-- End Single Page Apps for GitHub Pages -->
 
-  <div id="root"></div>
-</body>
+    <div id="root"></div>
+  </body>
 </html>
